interpreter/examples/bad/type/bad_function_assignment3.dl
{
    function f(ref x) return 1,
    function g(fun x) return 2.
    f = g
}
